--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>r07</version>
+    </dependency>
   </dependencies>
   
    <build>
@@ -28,6 +33,7 @@
       <plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-compiler-plugin</artifactId>
+		<version>2.3.2</version>
 		<configuration>
 		<source>1.6</source>
 		<target>1.6</target>
